# rigel

./: .gitignore  .readthedocs.yml  Makefile  README.md  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
rigel/: __init__.py  cfg.py  code.py  constants.py  exceptions.py  instruction.py  lnotab.py  loader.py  utils.py  visitor.py  visualizer.py
rigel/dsl/: assembler.py
rigel/instrumentation/: loader.py
tests/: test_code.py
