[tool.poetry]
name = "rigel"
version = "0.1.0"
description = ""
authors = ["Sergey Reshetnikov <resh.sersh@gmail.com>"]
license = "Apache2.0"

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^9.1.0"
graphviz = "^0.20.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
mypy = "^1.1.1"
pylint = "^2.17.3"
isort = "^5.12.0"

Sphinx = "^6.1.3"
m2r2 = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
